chore: styling updates for know stac

--- a/uasdm-ui/src/app/site/component/know-stac-panel/know-stac-panel.component.html
+++ b/uasdm-ui/src/app/site/component/know-stac-panel/know-stac-panel.component.html
@@ -1,34 +1,35 @@
 <ng-container>
     <div class="row">
-        <div class="col-md-12 text-center">
-            <h4>
-                Search GeoPlatform for Products in Map Extent
-            </h4>
+        <div class="col-md-12">
+            <div class="btn-holder" style="float: right; text-align: right;padding: 0 10px 10px 0;">
+                <a (click)="handleClose()">
+                    <i class="fa fa-solid fa-arrow-left"></i>
+                </a>
+            </div>
         </div>
     </div>
-
     <div class="row">
-        <div class="col-md-1">
-        </div>
-        <div class="col-md-10 center-block">
-            <div class="btn-holder" style="text-align: right;padding: 0 10px 10px 0;">
-                <button type="button" (click)="handleClose()" class="btn btn-default" role="button"
-                    aria-disabled="false" style="padding: 4px 18px;">
-                    <span class="ui-button-text">Close</span>
-                </button>
+        <div class="col-md-12 center-block">
+            <div class="btn-holder text-center" style="padding: 0 10px 10px 0;">
 
                 <button type="button" (click)="handleClear()" class="btn btn-default" role="button"
                     aria-disabled="false" style="padding: 4px 18px; margin-left: 5px;">
-                    <span class="ui-button-text">Clear</span>
+                    <span class="ui-button-text">Clear results</span>
                 </button>
 
                 <button type="button btn btn-primary" class="btn btn-primary" (click)="handleSearch()">
                     <i class="icon-upload icon-white"></i>
-                    Search
+                    Search map extent
                 </button>
             </div>
         </div>
-        <div class="col-md-1">
+    </div>
+
+    <div class="row pt-3">
+        <div class="col-md-12 text-center">
+            <h4>
+                Search GeoPlatform for Products
+            </h4>
         </div>
     </div>
 
@@ -75,7 +76,7 @@
                                                 <boolean-field [value]="result.item.enabled"
                                                     (valueChange)="handleToggleItem(result.item)"
                                                     [disabled]="result.item.asset == null || result.item.asset == ''"
-                                                    label="Enabled">
+                                                    label="Add to map">
                                                 </boolean-field>
                                             </li>
                                         </ul>
