--- a/uasdm-ui/src/app/site/component/imagery-panel/imagery-panel.component.html
+++ b/uasdm-ui/src/app/site/component/imagery-panel/imagery-panel.component.html
@@ -1,16 +1,19 @@
 <ng-container>
     <div class="row">
-        <div class="col-md-10">
-            <h4>Current Map Imagery</h4>
-        </div>
-        <div class="col-md-2">
+        <div class="col-md-12">
             <div class="btn-holder" style="float: right; text-align: right;padding: 0 10px 10px 0;">
                 <a (click)="handleClose()">
-                    <i class="fa fa-times"></i>
+                    <i class="fa fa-solid fa-arrow-left"></i>
                 </a>
             </div>
         </div>
     </div>
+    <div class="row" *ngIf="layers == null || layers.length == 0">
+        <div class="col-md-12" style="padding: 20px;text-align: center;color: grey; font-style: italic;">
+            <h4>No data selected</h4>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-md-12" style="background:#f7f7f7; padding:0; height:100%;">
             <div class="list-group">
@@ -61,7 +64,7 @@
                                     </div>
                                     <div class="col-sm-4">
                                         <a (click)="handleGotoExtent(layer)">
-                                            <i class="fa fa-glasses"></i>
+                                            <i class="fa product-icon fa-globe"></i>
                                             Zoom
                                         </a>
                                     </div>
