--- a/uasdm-ui/src/app/site/component/legend-panel/legend-panel.component.html
+++ b/uasdm-ui/src/app/site/component/legend-panel/legend-panel.component.html
@@ -1,4 +1,4 @@
-<div style="background:#fff; padding:8px;border-radius:4px; cursor: pointer" (click)="handleClick()">
+<div style="background:#fff; padding:8px;border-radius:4px; cursor: pointer" (click)="handleClick()" title="Legend">
     <ng-container *ngIf="!open">
         <i class="fa fa-map" style="margin: 2px;"></i>
     </ng-container>
