chore: styling for know stac buttons

--- a/uasdm-ui/src/app/site/component/legend-panel/legend-panel.component.html
+++ b/uasdm-ui/src/app/site/component/legend-panel/legend-panel.component.html
@@ -1,6 +1,6 @@
 <div style="background:#fff; padding:8px;border-radius:4px; cursor: pointer" (click)="handleClick()" title="Legend">
     <ng-container *ngIf="!open">
-        <i class="fa fa-map" style="margin: 2px;"></i>
+        <i class="fa fa-map hover-color" style="margin: 2px;"></i>
     </ng-container>
     <ng-container *ngIf="open">
         <h4>Legend</h4>
