--- a/uasdm-ui/src/app/site/component/projects.component.html
+++ b/uasdm-ui/src/app/site/component/projects.component.html
@@ -547,7 +547,7 @@
               <div [style]="panelType === 3 ? 'background:#767676;': 'background:#fff;'"
                 style="padding:6px;border-radius:4px;">
                 <a (click)="panelType === 3 ? panelType = 0 : panelType = 3" title="Search GeoPlatform">
-                  <i class="fa fa-search" [ngClass]="{'fa-inverse': panelType === 3}"></i>
+                  <i class="fa fa-search hover-color" [ngClass]="{'fa-inverse': panelType === 3}"></i>
                 </a>
               </div>
             </article>
