chore: hover style for close arrows

--- a/uasdm-ui/src/app/site/component/imagery-panel/imagery-panel.component.html
+++ b/uasdm-ui/src/app/site/component/imagery-panel/imagery-panel.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-12">
             <div class="btn-holder" style="float: right; text-align: right;padding: 0 10px 10px 0;">
                 <a (click)="handleClose()">
-                    <i class="fa fa-solid fa-arrow-left"></i>
+                    <i class="fa fa-solid fa-arrow-left hover-color"></i>
                 </a>
             </div>
         </div>
