chore: updated collection modal to show accessibility and PII data

--- a/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
@@ -56,6 +56,18 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-md-12">
+          <label class="form-label">Accessibility: </label> &nbsp; {{entity.isPrivate ? 'Private' : 'Public'}}
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <label class="form-label">Has PII Concerns: </label> &nbsp; {{entity.hasPIIConcern ? 'Yes' : 'No'}}
+        </div>
+      </div>
+
 
       <div class="row">
         <div class="col-md-6">
