chore: fixed issue on s3 delete objects when there are no keys + refactored the websocket design to use a single service

--- a/uasdm-ui/src/app/admin/component/labeled-property-graph-sync/labeled-property-graph-sync.component.html
+++ b/uasdm-ui/src/app/admin/component/labeled-property-graph-sync/labeled-property-graph-sync.component.html
@@ -78,7 +78,7 @@
           <button type="submit" class="btn btn-primary" (click)="handleOnSubmit()"
             [disabled]="!ngForm.valid || !isValid()">Apply</button>
         </div>
-        <div *ngIf="isAdmin && mode === 'READ'" class="btn-holder" style="text-align: right;">
+        <div *ngIf="isAdmin && mode === 'READ'" class="btn-holder mt-2" style="text-align: right;">
           <!--
   <button type="submit" class="btn btn-primary" (click)="handleOnEdit()">Edit</button>
 -->
