--- a/uasdm-ui/src/styles/styles.scss
+++ b/uasdm-ui/src/styles/styles.scss
@@ -1,24 +1,24 @@
 $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
-@import "../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
-@import '../../node_modules/@fortawesome/fontawesome-free/scss/regular.scss';
-@import '../../node_modules/@fortawesome/fontawesome-free/scss/solid.scss';
-@import '../../node_modules/@fortawesome/fontawesome-free/scss/brands.scss';
+@use "@fortawesome/fontawesome-free/scss/fontawesome.scss";
+@use '@fortawesome/fontawesome-free/scss/regular.scss';
+@use '@fortawesome/fontawesome-free/scss/solid.scss';
+@use '@fortawesome/fontawesome-free/scss/brands.scss';
 
-@import "~bootstrap/dist/css/bootstrap.css";
+@use "bootstrap/dist/css/bootstrap.css";
 
-@import '~maplibre-gl/dist/maplibre-gl.css';
-@import '~@mapbox/mapbox-gl-draw/dist/mapbox-gl-draw.css';
+@use 'maplibre-gl/dist/maplibre-gl.css';
+@use './node_modules/@mapbox/mapbox-gl-draw/dist/mapbox-gl-draw.css';
 
-@import '@angular/cdk/overlay-prebuilt.css';
+@use '@angular/cdk/overlay-prebuilt.css';
 
-@import '~@ali-hm/angular-tree-component/css/angular-tree-component.css';
-@import './node_modules/@perfectmemory/ngx-contextmenu/src/assets/stylesheets/base.scss';
+@use '@ali-hm/angular-tree-component/css/angular-tree-component.css';
+@use './node_modules/@perfectmemory/ngx-contextmenu/src/assets/stylesheets/base.scss';
 
-@import "~primeicons/primeicons.css";
+@use "primeicons/primeicons.css";
 
-@import 'theme.css';
-@import 'main.css';
-@import 'admin-pages.css';
+@use 'theme.css';
+@use 'main.css';
+@use 'admin-pages.css';
 
 body {
   overflow-y: auto;
