--- a/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
@@ -20,7 +20,11 @@
       <div class="row">
         <div class="col-md-12">
           <h2>{{entity.name}} <span *ngIf="!entity.metadataUploaded" style="margin-left: 0;margin-bottom: 5px;"></span>
+            <a class="float-end" (click)="copyLocation()" title="Copy url to clipboard">
+              <i class="fa fa-solid fa-share-nodes"></i>
+            </a>
           </h2>
+
         </div>
       </div>
 
@@ -173,7 +177,8 @@
             <tab heading="raw" (selectTab)="onSelect('image')">
               <i *ngIf="loading" class="fa fa-spinner fa-spin" style="margin-left:50%;"></i>
 
-              <div *ngIf="!entity?.format || entity.format.startsWith('STILL_') || entity.format === 'LIDAR'" class="image-list-container">
+              <div *ngIf="!entity?.format || entity.format.startsWith('STILL_') || entity.format === 'LIDAR'"
+                class="image-list-container">
 
                 <ul class="list-group list-group-horizontal flex-wrap">
                   <li
@@ -181,12 +186,10 @@
                     class="list-group-item col-3">
                     <a class="d-block text-decoration-none text-reset mx-auto d-block"
                       [ngClass]="{'card-disabled' : item.exclude, 'non-clickable' : !enableSelectableImages}">
-                      <i class="image-action download fa fa-download float-end"
-                        (click)="handleDownloadFile(item)"
-                        title="Download image"
-                        style="cursor: pointer;"></i>
-                      <input type="checkbox" class="image-action exclude" *ngIf="enableSelectableImages" [checked]="item.exclude"
-                        (change)="toggleExcludeImage($event, item)"
+                      <i class="image-action download fa fa-download float-end" (click)="handleDownloadFile(item)"
+                        title="Download image" style="cursor: pointer;"></i>
+                      <input type="checkbox" class="image-action exclude" *ngIf="enableSelectableImages"
+                        [checked]="item.exclude" (change)="toggleExcludeImage($event, item)"
                         [title]="item.exclude ? 'Include image in processing' : 'Exclude image from processing'"
                         style="cursor: pointer;" />
                       <figure class="figure ">
@@ -234,11 +237,12 @@
                   <li *ngFor="let item of page.results" class="list-group-item col-3">
                     <div (click)="showVideo(item)" style="cursor: pointer;">
                       <figure class="figure ">
-                        <img [src]="context + '/assets/thumbnail-video.png'" alt="Video" class="thumb figure-img img-fluid rounded" style="max-height: 150px">
+                        <img [src]="context + '/assets/thumbnail-video.png'" alt="Video"
+                          class="thumb figure-img img-fluid rounded" style="max-height: 150px">
                         <figcaption class="figure-caption">
                           {{item.name}}
                         </figcaption>
-                      </figure>                                           
+                      </figure>
                     </div>
                   </li>
                 </ul>
